# experiments-in-simd

./: .clang-format  .gitignore  MODULE.bazel  readme.md
src/: BUILD.bazel  bitonic_sort.cpp  bitonic_sort.hpp  convolution.hpp  cosine_sim.hpp  edge_detection.hpp  horizontal_operations.hpp  linear_inference.cpp  linear_inference.hpp  matmul.hpp  prefix_sum.hpp  vector_quantisation.hpp  vectorised_activation.hpp
tests/: BUILD.bazel
